# modelAI

./: .gitignore  CLAUDE.md  ISSUES.md  LICENSE  Makefile  README.md  TESTING_SETUP.md  integration_test_result.txt  plan.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  result.json  test_cli_direct.py  test_cli_scripts.py  test_cli_simple.py  test_encoders.py  test_feature_engineering.py  test_feature_simple.py  test_loaders.py  test_mergers.py  test_models.py  test_output_schemas.py  test_pipelines.py  test_preprocessors.py  test_result.txt  test_simple.py  test_utils.py  test_validators.py  test_xai.py
.cursor/: mota AI.txt  rules.txt
data/: Danh sach thong tin khao sat sinh vien k28-CNTT.xlsx  DiemTong.xlsx  Dữ liệu điểm danh Khoa FIRA.xlsx  Khảo sát các yếu tố cá nhân phục vụ phân tích và dự báo kết quả học tập sinh viên (Câu trả lời).xlsx  PPDG.xlsx  PPDGfull.xlsx  PPGD.xlsx  PPGDfull.xlsx  academic_midterm_reason_solution_dataset_5000.csv  clo_attendance_reason_solution_dataset_5000.csv  clo_scores.csv  diemrenluyen.xlsx  evaluation_methods_reason_solution_dataset_v2_5000.csv  khaosat.xlsx  nhankhau.xlsx  student_conduct_reason_solution_dataset_v1_5000.csv  student_selfstudy_reason_solution_dataset_v1_5000.csv  teaching_methods_reason_solution_dataset_v2_5000.csv  tuhoc.xlsx
docs/: DEPRECATION_SCOPE.md  EXPERIMENTS_LOG.md  FEASIBILITY_REPORT_NEW_REQUIREMENTS.md  FEEDBACK_REPORT.txt  IMPLEMENTATION_PLAN_ADVISOR_FEEDBACK.md  IMPLEMENTATION_PLAN_FEEDBACK.md  IMPLEMENTATION_PLAN_NEW_REQUIREMENTS.md  MODEL_QUALITY_ASSESSMENT.md  advisor_feedback_assessment.md  baseline_ablation.md  class_analysis_pipeline.md  data_model.md  model_requirements.md  prediction_pipeline.md  report_model_encoding_temporal.md  system_architecture.md  system_overview.md  training_pipeline.md
experiments/: results.json
scripts/: analyze_class.py  predict.py  run_ablation_encoding.py  run_ablation_survey.py  run_ablation_temporal.py  test_prediction_differentiation.py  (+1 more)
(+65 files in other folders)
